feat: finish frontend catalog and classic layout
